include/ciaaw_saw_2021.h

/** @brief C API Object representing an element.*/
struct ciaaw_saw_element_t_2021{
    char element[25]; /**< Element name. */
    char symbol[9]; /**< Element symbol. */
    int z; /**< Element atomic number. */
    double saw_min; /**< Min standard atomic weight. */
    double saw_max; /**< Max standard atomic weight. */
    double saw; /**< Value standard atomic weight. */
    double saw_u; /**< Uncertainty standard atomic weight. */
    double asaw; /**< Abridged value standard atomic weight. */
    double asaw_u; /**< Abridged uncertainty standard atomic weight. */
};
ADD_IMPORT extern const struct ciaaw_saw_element_t_2021 ciaaw_saw_Zr_2021;/**< C API Zr_2021.*/
ADD_IMPORT extern const struct ciaaw_saw_element_t_2021 ciaaw_saw_Nb_2021;/**< C API Nb_2021.*/
ADD_IMPORT extern const struct ciaaw_saw_element_t_2021 ciaaw_saw_Mo_2021;/**< C API Mo_2021.*/
ADD_IMPORT extern const struct ciaaw_saw_element_t_2021 ciaaw_saw_Tc_2021;/**< C API Tc_2021.*/
ADD_IMPORT extern const struct ciaaw_saw_element_t_2021 ciaaw_saw_Ru_2021;/**< C API Ru_2021.*/
ADD_IMPORT extern const struct ciaaw_saw_element_t_2021 ciaaw_saw_Rh_2021;/**< C API Rh_2021.*/
ADD_IMPORT extern const struct ciaaw_saw_element_t_2021 ciaaw_saw_Pd_2021;/**< C API Pd_2021.*/
ADD_IMPORT extern const struct ciaaw_saw_element_t_2021 ciaaw_saw_Ag_2021;/**< C API Ag_2021.*/
ADD_IMPORT extern const struct ciaaw_saw_element_t_2021 ciaaw_saw_Cd_2021;/**< C API Cd_2021.*/
ADD_IMPORT extern const struct ciaaw_saw_element_t_2021 ciaaw_saw_In_2021;/**< C API In_2021.*/
ADD_IMPORT extern const struct ciaaw_saw_element_t_2021 ciaaw_saw_Sn_2021;/**< C API Sn_2021.*/
ADD_IMPORT extern const struct ciaaw_saw_element_t_2021 ciaaw_saw_Sb_2021;/**< C API Sb_2021.*/
ADD_IMPORT extern const struct ciaaw_saw_element_t_2021 ciaaw_saw_Te_2021;/**< C API Te_2021.*/
ADD_IMPORT extern const struct ciaaw_saw_element_t_2021 ciaaw_saw_I_2021;/**< C API I_2021.*/
ADD_IMPORT extern const struct ciaaw_saw_element_t_2021 ciaaw_saw_Xe_2021;/**< C API Xe_2021.*/
ADD_IMPORT extern const struct ciaaw_saw_element_t_2021 ciaaw_saw_Cs_2021;/**< C API Cs_2021.*/
ADD_IMPORT extern const struct ciaaw_saw_element_t_2021 ciaaw_saw_Ba_2021;/**< C API Ba_2021.*/
ADD_IMPORT extern const struct ciaaw_saw_element_t_2021 ciaaw_saw_La_2021;/**< C API La_2021.*/
ADD_IMPORT extern const struct ciaaw_saw_element_t_2021 ciaaw_saw_Ce_2021;/**< C API Ce_2021.*/
ADD_IMPORT extern const struct ciaaw_saw_element_t_2021 ciaaw_saw_Pr_2021;/**< C API Pr_2021.*/
ADD_IMPORT extern const struct ciaaw_saw_element_t_2021 ciaaw_saw_Nd_2021;/**< C API Nd_2021.*/