src/ciaaw_saw_2021.f90


!> zirconium.
type(element_t_2021), parameter, public :: Zr_2021 =&
element_t_2021("zirconium","Zr", 40, nan, nan, 91.224d0, 0.002d0, 91.224d0, 0.002d0)
!> C API zirconium.
type(capi_element_t_2021), protected, public, bind(C, name="ciaaw_saw_Zr_2021") :: capi_Zr_2021 =&
capi_element_t_2021(&
["z","i","r","c","o","n","i","u","m",c_null_char, " "," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["Z","r",c_null_char, " "," "," "," "," "," "], &
Zr_2021%z, &
Zr_2021%saw_max, Zr_2021%saw_min, Zr_2021%saw, Zr_2021%saw_u, Zr_2021%asaw, Zr_2021%asaw_u)

!> nobium.
type(element_t_2021), parameter, public :: Nb_2021 =&
element_t_2021("nobium","Nb", 41, nan, nan, 92.90637d0, 0.00001d0, 92.906d0, 0.001d0)
!> C API nobium.
type(capi_element_t_2021), protected, public, bind(C, name="ciaaw_saw_Nb_2021") :: capi_Nb_2021 =&
capi_element_t_2021(&
["n","o","b","i","u","m",c_null_char, " "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["N","b",c_null_char, " "," "," "," "," "," "], &
Nb_2021%z, &
Nb_2021%saw_max, Nb_2021%saw_min, Nb_2021%saw, Nb_2021%saw_u, Nb_2021%asaw, Nb_2021%asaw_u)

!> molybdenum.
type(element_t_2021), parameter, public :: Mo_2021 =&
element_t_2021("molybdenum","Mo", 42, nan, nan, 95.95d0, 0.01d0, 95.95d0, 0.01d0)
!> C API molybdenum.
type(capi_element_t_2021), protected, public, bind(C, name="ciaaw_saw_Mo_2021") :: capi_Mo_2021 =&
capi_element_t_2021(&
["m","o","l","y","b","d","e","n","u","m",c_null_char, " "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["M","o",c_null_char, " "," "," "," "," "," "], &
Mo_2021%z, &
Mo_2021%saw_max, Mo_2021%saw_min, Mo_2021%saw, Mo_2021%saw_u, Mo_2021%asaw, Mo_2021%asaw_u)

!> technetium.
type(element_t_2021), parameter, public :: Tc_2021 =&
element_t_2021("technetium","Tc", 43, nan, nan, nan, nan, nan, nan)
!> C API technetium.
type(capi_element_t_2021), protected, public, bind(C, name="ciaaw_saw_Tc_2021") :: capi_Tc_2021 =&
capi_element_t_2021(&
["t","e","c","h","n","e","t","i","u","m",c_null_char, " "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["T","c",c_null_char, " "," "," "," "," "," "], &
Tc_2021%z, &
Tc_2021%saw_max, Tc_2021%saw_min, Tc_2021%saw, Tc_2021%saw_u, Tc_2021%asaw, Tc_2021%asaw_u)

!> ruthenium.
type(element_t_2021), parameter, public :: Ru_2021 =&
element_t_2021("ruthenium","Ru", 44, nan, nan, 101.07d0, 0.02d0, 101.07d0, 0.02d0)
!> C API ruthenium.
type(capi_element_t_2021), protected, public, bind(C, name="ciaaw_saw_Ru_2021") :: capi_Ru_2021 =&
capi_element_t_2021(&
["r","u","t","h","e","n","i","u","m",c_null_char, " "," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["R","u",c_null_char, " "," "," "," "," "," "], &
Ru_2021%z, &
Ru_2021%saw_max, Ru_2021%saw_min, Ru_2021%saw, Ru_2021%saw_u, Ru_2021%asaw, Ru_2021%asaw_u)

!> rhodium.
type(element_t_2021), parameter, public :: Rh_2021 =&
element_t_2021("rhodium","Rh", 45, nan, nan, 102.90549d0, 0.00002d0, 102.91d0, 0.01d0)
!> C API rhodium.
type(capi_element_t_2021), protected, public, bind(C, name="ciaaw_saw_Rh_2021") :: capi_Rh_2021 =&
capi_element_t_2021(&
["r","h","o","d","i","u","m",c_null_char, " "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["R","h",c_null_char, " "," "," "," "," "," "], &
Rh_2021%z, &
Rh_2021%saw_max, Rh_2021%saw_min, Rh_2021%saw, Rh_2021%saw_u, Rh_2021%asaw, Rh_2021%asaw_u)

!> palladium.
type(element_t_2021), parameter, public :: Pd_2021 =&
element_t_2021("palladium","Pd", 46, nan, nan, 106.42d0, 0.01d0, 106.42d0, 0.01d0)
!> C API palladium.
type(capi_element_t_2021), protected, public, bind(C, name="ciaaw_saw_Pd_2021") :: capi_Pd_2021 =&
capi_element_t_2021(&
["p","a","l","l","a","d","i","u","m",c_null_char, " "," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["P","d",c_null_char, " "," "," "," "," "," "], &
Pd_2021%z, &
Pd_2021%saw_max, Pd_2021%saw_min, Pd_2021%saw, Pd_2021%saw_u, Pd_2021%asaw, Pd_2021%asaw_u)

!> silver.
type(element_t_2021), parameter, public :: Ag_2021 =&
element_t_2021("silver","Ag", 47, nan, nan, 107.8682d0, 0.0002d0, 107.87d0, 0.01d0)
!> C API silver.
type(capi_element_t_2021), protected, public, bind(C, name="ciaaw_saw_Ag_2021") :: capi_Ag_2021 =&
capi_element_t_2021(&
["s","i","l","v","e","r",c_null_char, " "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["A","g",c_null_char, " "," "," "," "," "," "], &
Ag_2021%z, &
Ag_2021%saw_max, Ag_2021%saw_min, Ag_2021%saw, Ag_2021%saw_u, Ag_2021%asaw, Ag_2021%asaw_u)

!> cadmium.
type(element_t_2021), parameter, public :: Cd_2021 =&
element_t_2021("cadmium","Cd", 48, nan, nan, 112.414d0, 0.004d0, 112.41d0, 0.01d0)
!> C API cadmium.
type(capi_element_t_2021), protected, public, bind(C, name="ciaaw_saw_Cd_2021") :: capi_Cd_2021 =&
capi_element_t_2021(&
["c","a","d","m","i","u","m",c_null_char, " "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["C","d",c_null_char, " "," "," "," "," "," "], &
Cd_2021%z, &
Cd_2021%saw_max, Cd_2021%saw_min, Cd_2021%saw, Cd_2021%saw_u, Cd_2021%asaw, Cd_2021%asaw_u)

!> indium.
type(element_t_2021), parameter, public :: In_2021 =&
element_t_2021("indium","In", 49, nan, nan, 114.818d0, 0.001d0, 114.82d0, 0.01d0)
!> C API indium.
type(capi_element_t_2021), protected, public, bind(C, name="ciaaw_saw_In_2021") :: capi_In_2021 =&
capi_element_t_2021(&
["i","n","d","i","u","m",c_null_char, " "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["I","n",c_null_char, " "," "," "," "," "," "], &
In_2021%z, &
In_2021%saw_max, In_2021%saw_min, In_2021%saw, In_2021%saw_u, In_2021%asaw, In_2021%asaw_u)

!> tin.
type(element_t_2021), parameter, public :: Sn_2021 =&
element_t_2021("tin","Sn", 50, nan, nan, 118.70d0, 0.007d0, 118.71d0, 0.01d0)
!> C API tin.
type(capi_element_t_2021), protected, public, bind(C, name="ciaaw_saw_Sn_2021") :: capi_Sn_2021 =&
capi_element_t_2021(&
["t","i","n",c_null_char, " "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["S","n",c_null_char, " "," "," "," "," "," "], &
Sn_2021%z, &
Sn_2021%saw_max, Sn_2021%saw_min, Sn_2021%saw, Sn_2021%saw_u, Sn_2021%asaw, Sn_2021%asaw_u)

!> antimony.
type(element_t_2021), parameter, public :: Sb_2021 =&
element_t_2021("antimony","Sb", 51, nan, nan, 121.760d0, 0.001d0, 121.76d0, 0.01d0)
!> C API antimony.
type(capi_element_t_2021), protected, public, bind(C, name="ciaaw_saw_Sb_2021") :: capi_Sb_2021 =&
capi_element_t_2021(&
["a","n","t","i","m","o","n","y",c_null_char, " "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["S","b",c_null_char, " "," "," "," "," "," "], &
Sb_2021%z, &
Sb_2021%saw_max, Sb_2021%saw_min, Sb_2021%saw, Sb_2021%saw_u, Sb_2021%asaw, Sb_2021%asaw_u)

!> tellurium.
type(element_t_2021), parameter, public :: Te_2021 =&
element_t_2021("tellurium","Te", 52, nan, nan, 127.60d0, 0.03d0, 127.60d0, 0.03d0)
!> C API tellurium.
type(capi_element_t_2021), protected, public, bind(C, name="ciaaw_saw_Te_2021") :: capi_Te_2021 =&
capi_element_t_2021(&
["t","e","l","l","u","r","i","u","m",c_null_char, " "," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["T","e",c_null_char, " "," "," "," "," "," "], &
Te_2021%z, &
Te_2021%saw_max, Te_2021%saw_min, Te_2021%saw, Te_2021%saw_u, Te_2021%asaw, Te_2021%asaw_u)

!> iodine.
type(element_t_2021), parameter, public :: I_2021 =&
element_t_2021("iodine","I", 53, nan, nan, 126.90447d0, 0.00003d0, 126.90d0, 0.01d0)
!> C API iodine.
type(capi_element_t_2021), protected, public, bind(C, name="ciaaw_saw_I_2021") :: capi_I_2021 =&
capi_element_t_2021(&
["i","o","d","i","n","e",c_null_char, " "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["I",c_null_char, " "," "," "," "," "," "," "], &
I_2021%z, &
I_2021%saw_max, I_2021%saw_min, I_2021%saw, I_2021%saw_u, I_2021%asaw, I_2021%asaw_u)

!> xenon.
type(element_t_2021), parameter, public :: Xe_2021 =&
element_t_2021("xenon","Xe", 54, nan, nan, 131.293d0, 0.006d0, 131.29d0, 0.01d0)
!> C API xenon.
type(capi_element_t_2021), protected, public, bind(C, name="ciaaw_saw_Xe_2021") :: capi_Xe_2021 =&
capi_element_t_2021(&
["x","e","n","o","n",c_null_char, " "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["X","e",c_null_char, " "," "," "," "," "," "], &
Xe_2021%z, &
Xe_2021%saw_max, Xe_2021%saw_min, Xe_2021%saw, Xe_2021%saw_u, Xe_2021%asaw, Xe_2021%asaw_u)

!> caesium.
type(element_t_2021), parameter, public :: Cs_2021 =&
element_t_2021("caesium","Cs", 55, nan, nan, 132.90545196d0, 0.00000006d0, 132.91d0, 0.01d0)
!> C API caesium.
type(capi_element_t_2021), protected, public, bind(C, name="ciaaw_saw_Cs_2021") :: capi_Cs_2021 =&
capi_element_t_2021(&
["c","a","e","s","i","u","m",c_null_char, " "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["C","s",c_null_char, " "," "," "," "," "," "], &
Cs_2021%z, &
Cs_2021%saw_max, Cs_2021%saw_min, Cs_2021%saw, Cs_2021%saw_u, Cs_2021%asaw, Cs_2021%asaw_u)

!> barium.
type(element_t_2021), parameter, public :: Ba_2021 =&
element_t_2021("barium","Ba", 56, nan, nan, 137.327d0, 0.007d0, 137.33d0, 0.01d0)
!> C API barium.
type(capi_element_t_2021), protected, public, bind(C, name="ciaaw_saw_Ba_2021") :: capi_Ba_2021 =&
capi_element_t_2021(&
["b","a","r","i","u","m",c_null_char, " "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["B","a",c_null_char, " "," "," "," "," "," "], &
Ba_2021%z, &
Ba_2021%saw_max, Ba_2021%saw_min, Ba_2021%saw, Ba_2021%saw_u, Ba_2021%asaw, Ba_2021%asaw_u)

!> lanthanum.
type(element_t_2021), parameter, public :: La_2021 =&
element_t_2021("lanthanum","La", 57, nan, nan, 138.90547d0, 0.00007d0, 138.91d0, 0.01d0)
!> C API lanthanum.
type(capi_element_t_2021), protected, public, bind(C, name="ciaaw_saw_La_2021") :: capi_La_2021 =&
capi_element_t_2021(&
["l","a","n","t","h","a","n","u","m",c_null_char, " "," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["L","a",c_null_char, " "," "," "," "," "," "], &
La_2021%z, &
La_2021%saw_max, La_2021%saw_min, La_2021%saw, La_2021%saw_u, La_2021%asaw, La_2021%asaw_u)

!> cerium.
type(element_t_2021), parameter, public :: Ce_2021 =&
element_t_2021("cerium","Ce", 58, nan, nan, 140.116d0, 0.001d0, 140.12d0, 0.01d0)
!> C API cerium.
type(capi_element_t_2021), protected, public, bind(C, name="ciaaw_saw_Ce_2021") :: capi_Ce_2021 =&
capi_element_t_2021(&
["c","e","r","i","u","m",c_null_char, " "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["C","e",c_null_char, " "," "," "," "," "," "], &
Ce_2021%z, &
Ce_2021%saw_max, Ce_2021%saw_min, Ce_2021%saw, Ce_2021%saw_u, Ce_2021%asaw, Ce_2021%asaw_u)

!> praseodymium.
type(element_t_2021), parameter, public :: Pr_2021 =&
element_t_2021("praseodymium","Pr", 59, nan, nan, 140.90766d0, 0.00001d0, 140.91d0, 0.01d0)
!> C API praseodymium.
type(capi_element_t_2021), protected, public, bind(C, name="ciaaw_saw_Pr_2021") :: capi_Pr_2021 =&
capi_element_t_2021(&
["p","r","a","s","e","o","d","y","m","i","u","m",c_null_char, " "," "," "," "," "," "," "," "," "," "," "," "], &
["P","r",c_null_char, " "," "," "," "," "," "], &
Pr_2021%z, &
Pr_2021%saw_max, Pr_2021%saw_min, Pr_2021%saw, Pr_2021%saw_u, Pr_2021%asaw, Pr_2021%asaw_u)

!> neodymium.
type(element_t_2021), parameter, public :: Nd_2021 =&
element_t_2021("neodymium","Nd", 60, nan, nan, 144.242d0, 0.003d0, 144.24d0, 0.01d0)
!> C API neodymium.
type(capi_element_t_2021), protected, public, bind(C, name="ciaaw_saw_Nd_2021") :: capi_Nd_2021 =&
capi_element_t_2021(&
["n","e","o","d","y","m","i","u","m",c_null_char, " "," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["N","d",c_null_char, " "," "," "," "," "," "], &
Nd_2021%z, &
Nd_2021%saw_max, Nd_2021%saw_min, Nd_2021%saw, Nd_2021%saw_u, Nd_2021%asaw, Nd_2021%asaw_u)
